Fix readme link and update usertesting notebook

--- a/notebooks/Usertesting_biaslyze_toxic-comments-usecase.ipynb
+++ b/notebooks/Usertesting_biaslyze_toxic-comments-usecase.ipynb
@@ -331,11 +331,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fd80a70e-b0cd-44c2-ae4f-cfce7daffbf9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from biaslyze.bias_detectors import CounterfactualBiasDetector\n",
+    "\n",
+    "bias_detector = CounterfactualBiasDetector()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce9c9588-8583-4e4a-8d8b-748c9d217ad3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counterfactual_detection_results = bias_detector.process(\n",
+    "    texts=test_df.comment_text,\n",
+    "    labels=test_df.target.tolist(),\n",
+    "    predict_func=clf.predict_proba,\n",
+    "    concepts_to_consider=[\"religion\", \"gender\"],\n",
+    "    max_counterfactual_samples=None,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aed0757e-64ec-4799-879b-d598fa01c33d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counterfactual_detection_results.visualize_counterfactual_scores(concept=\"gender\", top_n=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "489cd06e-4a14-46bd-b7d6-b189d893cd90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counterfactual_detection_results.visualize_counterfactual_scores(concept=\"religion\", top_n=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03205723-8c7b-48c6-9501-0206b9c2a78a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counterfactual_detection_results.visualize_counterfactual_sample_scores(concept=\"gender\", top_n=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72ff7f72-1b12-4003-bc71-605dff1b7f44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counterfactual_detection_results.visualize_counterfactual_scores(concept=\"religion\", top_n=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8653a335-560d-43e4-929d-ecf81555272c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counterfactual_detection_results.visualize_counterfactual_score_by_sample_histogram()"
+   ]
   }
  ],
  "metadata": {
