Update visuals for mitigation tutorial

--- a/notebooks/test-toxic-comments.ipynb
+++ b/notebooks/test-toxic-comments.ipynb
@@ -320,21 +320,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-10 16:10:11.101 | INFO     | biaslyze.concept_detectors:detect:47 - Started keyword-based concept detection on 10000 texts...\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10000/10000 [00:00<00:00, 51447.25it/s]\n",
-      "2023-08-10 16:10:11.302 | INFO     | biaslyze.concept_detectors:detect:64 - Done. Found 8934 texts with protected concepts.\n",
-      "2023-08-10 16:10:11.304 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:163 - Processing concept religion...\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8934/8934 [00:54<00:00, 164.44it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8934/8934 [00:02<00:00, 4426.39it/s]\n",
-      "2023-08-10 16:11:07.678 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:_extract_counterfactual_concept_samples:276 - Extracted 9481 counterfactual sample texts for concept religion from 233 original texts.\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 19/19 [00:03<00:00,  5.52it/s]\n",
-      "2023-08-10 16:11:11.363 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:223 - DONE\n",
-      "2023-08-10 16:11:11.363 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:163 - Processing concept gender...\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8934/8934 [00:54<00:00, 164.41it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8934/8934 [00:20<00:00, 440.71it/s]\n",
-      "2023-08-10 16:12:25.993 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:_extract_counterfactual_concept_samples:276 - Extracted 788697 counterfactual sample texts for concept gender from 3260 original texts.\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 81/81 [05:52<00:00,  4.35s/it]\n",
-      "2023-08-10 16:18:20.768 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:223 - DONE\n"
+      "2023-08-11 15:32:30.708 | INFO     | biaslyze.concept_detectors:detect:47 - Started keyword-based concept detection on 10000 texts...\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10000/10000 [00:00<00:00, 49588.79it/s]\n",
+      "2023-08-11 15:32:30.917 | INFO     | biaslyze.concept_detectors:detect:64 - Done. Found 8934 texts with protected concepts.\n",
+      "2023-08-11 15:32:30.918 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:163 - Processing concept religion...\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8934/8934 [00:50<00:00, 175.70it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8934/8934 [00:02<00:00, 4192.71it/s]\n",
+      "2023-08-11 15:33:23.928 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:_extract_counterfactual_concept_samples:276 - Extracted 9481 counterfactual sample texts for concept religion from 233 original texts.\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 19/19 [00:03<00:00,  5.40it/s]\n",
+      "2023-08-11 15:33:27.817 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:223 - DONE\n",
+      "2023-08-11 15:33:27.820 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:163 - Processing concept gender...\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8934/8934 [00:49<00:00, 181.56it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8934/8934 [00:18<00:00, 484.16it/s]\n",
+      "2023-08-11 15:34:35.509 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:_extract_counterfactual_concept_samples:276 - Extracted 788697 counterfactual sample texts for concept gender from 3260 original texts.\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 81/81 [05:46<00:00,  4.28s/it]\n",
+      "2023-08-11 15:40:26.773 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:223 - DONE\n"
      ]
     }
    ],
@@ -391,22 +391,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "cb216b67-73c8-412c-bfd3-b99d45e4a909",
    "metadata": {
     "tags": []
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tobias/Repositories/biaslyze/biaslyze/results/counterfactual_detection_results.py:157: UserWarning:\n",
-      "\n",
-      "Port 8090 is already in use. Using 8091 instead.\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -414,7 +404,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8091/\"\n",
+       "            src=\"http://127.0.0.1:8090/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -422,7 +412,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f996510f8b0>"
+       "<IPython.lib.display.IFrame at 0x7fc02b24b760>"
       ]
      },
      "metadata": {},
@@ -430,7 +420,7 @@
     }
    ],
    "source": [
-    "counterfactual_detection_results.dashboard()"
+    "counterfactual_detection_results.dashboard(num_keywords=10)"
    ]
   },
   {
@@ -443,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "c4ebefac-1c73-4cdd-bf4a-7bd681515db3",
    "metadata": {
     "tags": []
@@ -455,7 +445,7 @@
        "9481"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "265b7be1-780d-4870-8540-930501faca6d",
    "metadata": {
     "tags": []
@@ -482,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "0a0e322a-20be-4fa1-9d0b-b133c37939ba",
    "metadata": {
     "tags": []
@@ -495,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "42a43d6f-045c-4366-b651-0a9c6fc479da",
    "metadata": {
     "tags": []
@@ -535,7 +525,7 @@
        "                ('logisticregression', LogisticRegression(C=10))])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "2d398528-39ef-40ce-8c15-f7c5580205c7",
    "metadata": {
     "tags": []
@@ -561,15 +551,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-10 16:20:31.171 | INFO     | biaslyze.concept_detectors:detect:47 - Started keyword-based concept detection on 10000 texts...\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10000/10000 [00:00<00:00, 68322.38it/s]\n",
-      "2023-08-10 16:20:31.322 | INFO     | biaslyze.concept_detectors:detect:64 - Done. Found 277 texts with protected concepts.\n",
-      "2023-08-10 16:20:31.323 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:163 - Processing concept religion...\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 277/277 [00:03<00:00, 82.11it/s]\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 277/277 [00:00<00:00, 1248.62it/s]\n",
-      "2023-08-10 16:20:34.927 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:_extract_counterfactual_concept_samples:276 - Extracted 9899 counterfactual sample texts for concept religion from 213 original texts.\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 19/19 [00:04<00:00,  4.17it/s]\n",
-      "2023-08-10 16:20:39.646 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:223 - DONE\n"
+      "2023-08-11 15:41:37.267 | INFO     | biaslyze.concept_detectors:detect:47 - Started keyword-based concept detection on 10000 texts...\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10000/10000 [00:00<00:00, 62586.33it/s]\n",
+      "2023-08-11 15:41:37.439 | INFO     | biaslyze.concept_detectors:detect:64 - Done. Found 279 texts with protected concepts.\n",
+      "2023-08-11 15:41:37.442 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:163 - Processing concept religion...\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 279/279 [00:06<00:00, 41.19it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 279/279 [00:00<00:00, 390.24it/s]\n",
+      "2023-08-11 15:41:44.947 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:_extract_counterfactual_concept_samples:276 - Extracted 10811 counterfactual sample texts for concept religion from 233 original texts.\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 19/19 [00:10<00:00,  1.89it/s]\n",
+      "2023-08-11 15:41:55.294 | INFO     | biaslyze.bias_detectors.counterfactual_biasdetector:process:223 - DONE\n"
      ]
     }
    ],
@@ -586,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "d4ed6650-6cb5-4b2c-b2fd-18336fab5c4c",
    "metadata": {
     "tags": []
@@ -596,7 +586,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Concept: religion\t\tMax-Mean Counterfactual Score: 0.01086\t\tMax-Std Counterfactual Score: 0.03381\n"
+      "Concept: religion\t\tMax-Mean Counterfactual Score: 0.01335\t\tMax-Std Counterfactual Score: 0.04106\n"
      ]
     }
    ],
@@ -606,12 +596,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "742b8144-2a4e-49ad-a3b2-66fd95715864",
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tobias/Repositories/biaslyze/biaslyze/results/counterfactual_detection_results.py:160: UserWarning:\n",
+      "\n",
+      "Port 8090 is already in use. Using next free port 8091 instead.\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -619,7 +619,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8090/\"\n",
+       "            src=\"http://127.0.0.1:8091/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -627,7 +627,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f9965196230>"
+       "<IPython.lib.display.IFrame at 0x7fc0204dea40>"
       ]
      },
      "metadata": {},
